--- a/pricing card.html
+++ b/pricing card.html
@@ -11,8 +11,7 @@
             <p style="color: #2D3748;">Every plan includes 30 day free trial</p>
             <br><br><br>
             <div>
-                <h2 style="color: #2D3748;">Professional</h2>
-                <img src="heart.png">                
+                <h2 style="color: #2D3748;">Professional <img src="heart.png"></h2>               
                 <br>
                 <h1>$30.00</h1>
                 <br>
